<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
<TableLayout
    android:id="@+id/gvStatus"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:shrinkColumns="0"
    android:stretchColumns="1" >

<TableRow android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDat"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvValDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
       
        />
    
</TableRow>

<TableRow android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/tvSats"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:text="@string/txtSats"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvValSats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/bigtext" />
</TableRow>

<TableRow>

    <TextView
        android:id="@+id/tvLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtLat"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvValLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
       
        android:textSize="@dimen/bigtext" />
    
</TableRow>
<TableRow>

    <TextView
        android:id="@+id/tvLon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtLon"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvValLon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
       
        android:textSize="@dimen/bigtext" />
    
</TableRow>
<TableRow>

    <TextView
        android:id="@+id/tvAlt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAlt"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvValAlt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
       
        android:textSize="@dimen/bigtext" />
    
</TableRow>
<TableRow>

    <TextView
        android:id="@+id/tvSpd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSpd"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvValSpd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
       
        android:textSize="@dimen/bigtext" />
    
</TableRow>
<TableRow>

    <TextView
        android:id="@+id/tvAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAcc"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvValAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
       
        android:textSize="@dimen/bigtext" />
    
</TableRow>
<TableRow >
    <TextView
        android:id="@+id/tvEnabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEnabled"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvValEnabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
       
        android:textSize="@dimen/bigtext" />
    
</TableRow>
<TableRow >
    <TextView
        android:id="@+id/tvFixed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtFixed"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvValFixed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
       
        android:textSize="@dimen/bigtext" />
    
</TableRow>

  <TextView
      android:id="@+id/tvNoFix"
      android:layout_width="match_parent"
      android:layout_weight="0.5"
      android:maxWidth="@dimen/width"
      android:text="@string/warnNoFixTooLong"
      android:visibility="invisible" />

</TableLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/btnClearAGPS"
        android:layout_width="0dp"
        android:layout_height="match_parent"
      
        android:layout_weight="1"
        android:text="@string/txtDelAGPS" />

    <Button
        android:id="@+id/btnDownLodAGPS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/txtGetAGPS" />
</LinearLayout>

"
</LinearLayout>
</ScrollView>